          values to DBI: search({ array_col => { -value => [1,2,3] }})
        - +columns now behaves just like columns by not stripping a
          fully-qualified 'as' spec (i.e. foo.bar results in $obj->foo->bar)
        - Add full INSERT...RETURNING support for Oracle
        - Deprecate use of -nest in search conditions (warn once per
          callsite)

    * Fixes
        - Fixed read-only attribute set attempt in ::Storage::Replicated
          (RT#62642)
        - Fix incomplete logic while detecting correct Oracle sequence
          on insert
        - Fix detection of Oracle sequences for tables without an explicitly
          specified schema (RT#63493)
        - Major overhaul of Storage::Oracle to handle enabled quoting
        - Fixed incorrect composition of select/as/columns attributes during
          chaining (RT#61235)
        - Proper serialization of resultsets with open cursors
        - Refactor handling of RDBMS-side values during insert() - fix
          regression of inserts into a Postgres / ::Replicated combination
        - Missing dependency check in t/60core.t (RT#62635)
        - Fix regressions in IC::DT registration logic
        - Fix regression in select-associated bind value handling (RT#61025)
        - Simplify SQL generated by some LIMITed prefetching queries
        - Throw an exception when a required group_by on a complex prefetch
          can not be auto-constructed, instead of continuing to eventually
          produce invalid SQL
        - Fix infinite loops on old perls with a recent Try::Tiny
        - Improve "fork()" on Win32 by reimplementing a more robust DBIC
          thread support (still problematic, pending a DBI fix)
        - Properly quote table name on INSERT with no values
        - Work around possible Storage destruction warnings
        - Fix count of grouped resultsets using HAVING with aliases
        - Setting belongs_to columns/relationships no longer leaves the