@@ -82,8 +82,6 @@ Check out the L<Class::C3> docs for more information about inheritance.
 These components provide extra functionality beyond
 basic functionality that you can't live without.
 
-L<DBIx::Class::Serialize::Storable> - Hooks for Storable nfreeze/thaw.
-
 L<DBIx::Class::CDBICompat> - Class::DBI Compatibility layer.
 
 L<DBIx::Class::FormTools> - Build forms with multiple interconnected objects.
